--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     </form>
     <div class="coloumn">
       <div class="row">
-        <a href="https://mail.google.com/mail/u/0/#inbox"><i class="icon fa-solid fa-envelope fa-5x"></i><span class="label">Gmail</span></a>
-        <a href="https://keep.google.com/"><i class="icon fa-solid fa-note-sticky fa-5x"></i><span class="label">Notes</span></a>
+        <a href="https://www.cbc.ca/news"><i class="icon fa-solid fa-newspaper fa-5x"></i><span class="label">CBC News</span></a>
+        <a href="https://en.wikipedia.org/wiki/Main_Page"><i class="icon fa-solid fa-book fa-5x"></i><span class="label">Wikipedia</span></a>
         <a href="https://github.com/"><i class="icon fa-solid fa-code-pull-request fa-5x"></i><span class="label">Github</span></a>
-        <a href="https://www.google.com/maps"><i class="icon fa-solid fa-map fa-5x"></i><span class="label">Maps</span></a>
-        <a href="https://www.amazon.ca/"><i class="icon fa-brands fa-amazon fa-5x"></i><span class="label">Amazon</span></a>
+        <a href="https://www.viewpoint.ca/"><i class="icon fa-solid fa-house fa-5x"></i><span class="label">Viewpoint</span></a>
+        <a href="https://payroll.payworks.ca/loginscreen.asp?CustomerID=N90696"><i class="icon fa-solid fa-money-check-dollar fa-5x"></i><span class="label">Payworks</span></a>
       </div>
       <div class="row">
         <a href="https://outlook.office.com/mail/"><i class="icon fa-solid fa-inbox fa-5x"></i><span class="label">Dal Email</span></a>
@@ -25,11 +25,11 @@
         <a href="https://www.linkedin.com/feed/"><i class="icon fa-brands fa-linkedin fa-5x"></i><span class="label">LinkedIn</span></a>
       </div>
       <div class="row">
-        <a href="https://www.netflix.com/browse"><i class="icon fa-solid fa-film fa-5x"></i><span class="label">Netflix</span></a>
-        <a href="https://www.disneyplus.com/en-gb/home"><i class="icon fa-brands fa-fort-awesome-alt fa-5x"></i><span class="label">Disney+</span></a>
-        <a href="https://www.facebook.com"><i class="icon fa-brands fa-facebook fa-5x"></i><span class="label">Facebook</span></a>
-        <a href="https://www.instagram.com/"><i class="icon fa-brands fa-instagram fa-5x"></i><span class="label">Instagram</span></a>
-        <a href="https://www.primevideo.com/"><i class="icon fa-brands fa-youtube fa-5x"></i><span class="label">Prime Video</span></a>
+        <a href="https://www.theverge.com/"><i class="icon fa-solid fa-code-merge fa-5x"></i><span class="label">Verge</span></a>
+        <a href="https://www.polygon.com/"><i class="icon fa-solid fa-draw-polygon fa-5x"></i><span class="label">Polygon</span></a>
+        <a href="https://arstechnica.com/"><i class="icon fa-solid fa-microchip fa-5x"></i><span class="label">Ars Technica</span></a>
+        <a href="https://www.engadget.com/"><i class="icon fa-solid fa-tachograph-digital fa-5x"></i><span class="label">Engadget</span></a>
+        <a href="https://www.wired.com/"><i class="icon fa-solid fa-network-wired fa-5x"></i><span class="label">Wired</span></a>
       </div>
     </div>
 	</body>
