Return of Search Bar

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
       <script src="https://kit.fontawesome.com/3329260105.js" crossorigin="anonymous"></script>
     </head>
 	<body>
+    <form id="searchForm"></form>
+      <input type="text" placeholder="Search" id="searchBox">
+    </form>
     <div class="coloumn">
       <div class="row">
         <a href="https://www.cbc.ca/news"><i class="icon fa-solid fa-newspaper fa-3x"></i><span class="label">CBC News</span></a>
